--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alm-engineering/react-scroll-snap-slider",
-  "version": "2.0.8",
+  "version": "2.0.9",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/module.js",
@@ -27,6 +27,9 @@
   ],
   "author": "Michael Zoidl (@alm-engineering)",
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
